# Interview-App

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
docs/: DEPLOYMENT.md  PROJECT_OVERVIEW.md  TESTING.md  architecture.md  development.md  security.md  security_fix_validation_report.md  security_gap_fix_audit.md  testing.md
scripts/: demo_proof.py  openai_smoke_demo.py  service_guard_demo.py
src/interview_app/: __init__.py  debug_ndjson.py
src/interview_app/app/: __init__.py  controls.py  conversation_state.py  cv_session_state.py  interview_form_config.py  layout.py  main.py  session_reset.py  ui_settings.py  usage_mode.py
src/interview_app/config/: __init__.py  settings.py
src/interview_app/cv/: __init__.py  config.py  document_parser.py  exceptions.py  json_utils.py  models.py  prompt_builders.py  text_cleaning.py
src/interview_app/llm/: __init__.py  model_settings.py  openai_client.py
src/interview_app/prompts/: __init__.py  few_shot_examples.py  personas.py  prompt_strategies.py  prompt_templates.py  question_prompt_helpers.py
src/interview_app/security/: __init__.py  guards.py  logging.py  moderation.py  output_guard.py  pipeline.py  rate_limiter.py  redaction.py
src/interview_app/services/: __init__.py  answer_evaluator.py  chat_service.py  context_extractor.py  context_manager.py  cv_interview_service.py  effective_interview_config.py  interview_generator.py  mock_interview_flow.py
tests/: conftest.py  test_chat_service_settings_usage.py  test_context_mock_interview.py  test_mock_interview_context_routing.py  test_mock_interview_export.py  test_mock_interview_flow.py
tests/integration/: test_openai_client_smoke.py
tests/unit/: test_chat_service_security.py  test_config.py  test_controls_generation_defaults.py  test_cv_document_parser.py  test_cv_interview_service.py  test_cv_json_utils.py  test_cv_optional_guardrails.py  test_cv_session_state.py  test_cv_text_cleaning.py  test_errors.py  test_guardrails.py  test_interview_question_output.py  test_language.py  test_model_resolution_and_settings.py  test_moderation.py  test_openai_client_audit.py  test_output_guard.py  test_pipeline.py  test_prompt_strategies.py  test_rate_limit_chat_semantics.py  test_rate_limiter.py  test_redaction.py  test_security_config.py  test_security_logging.py  test_seniority_question_calibration.py  test_session_reset.py  test_sessions.py  test_strategy_prompt_differentiation.py  test_ui_settings_prompt_strategy.py  test_usage_mode.py
(+19 files in other folders)
